Refactor: comment about performance of simple misspelling finder